# EFT-Helper

./: .dockerignore  .env.example  .gitignore  ADMIN_SETUP.md  CHANGELOG_V2.md  Dockerfile  README.md  URGENT_FIX.md  docker-compose.yml  main.py  manage.bat  manage.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup_complete.py  start.py  test_news.py  weapon_properties_report.txt
api_clients/: __init__.py  tarkov_api_client.py
database/: __init__.py  config.py  db.py  meta_builds_data.py  models.py  quest_builds_data.py
docs/: ADMIN_PANEL.md  ADMIN_QUICK_START.md  AI_ASSISTANT_SETUP.md  API_INTEGRATION.md  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  DEPRECATED_FILES.md  DOCKER.md  HOTFIX_1.0_CHANGES.md  HOTFIX_1.0_RU.md  HOTFIX_1.1_DYNAMIC_BUILDS.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS.md  MANAGEMENT_SCRIPTS.md  POETRY_MIGRATION.md  QUEST_BUILDS_UPDATE.md  QUICKSTART.md  QUICK_COMMANDS.md  QUICK_START.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  USER_GUIDE.md  USER_GUIDE_V3.md  V3_FEATURES.md  VOICE_SETUP.md  ИНСТРУКЦИЯ_ПО_ОБНОВЛЕНИЮ.md
handlers/: __init__.py  admin.py  budget.py  budget_constructor.py  builds.py  common.py  community_builds.py  dynamic_builds.py  loyalty.py  loyalty_selection.py  meta_builds_handler.py  quest_builds.py  search.py  settings.py  tier_list.py
keyboards/: __init__.py  inline.py  reply.py
localization/: __init__.py  texts.py
scripts/: auto_sync_builds.py  check_builds.py  check_db.py  check_localization.py  check_magazines.py  check_quest_requirements.py  check_tarkov_ids.py  clean_db.py  (+32 more)
(+27 files in other folders)
